# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "countio"
version = "0.2.16"
readme = "./README.md"

edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

repository = "https://github.com/xwde/kit/countio"
homepage = "https://github.com/xwde/kit/countio"
documentation = "https://docs.rs/countio"
categories = ["parsing", "asynchronous"]
keywords = ["byte", "tokio", "futures", "parsing"]
description = """
Byte counting for std::io::{Read, Write, Seek} and
its async variants from futures and tokio.
"""

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
path = "./lib.rs"

[features]
default = ["std"]
std = []
futures = ["dep:futures-io"]
tokio = ["dep:tokio"]

[dependencies]
tokio = { version = "1.33.0", optional = true, default-features = false, features = [
] }
futures-io = { version = "0.3.28", optional = true, default-features = false, features = [
    "std",
] }

[dev-dependencies]
tokio = { version = "1.33.0", default-features = false, features = [
    "rt",
    "macros",
    "io-util",
] }
futures-util = { version = "0.3.28", default-features = false, features = [] }
futures-test = { version = "0.3.28", default-features = false, features = [
    "std",
] }
