# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "sitemapo"
version = "0.3.0"
readme = "./README.md"

edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

repository = "https://github.com/xwde/kit/inclusion"
homepage = "https://github.com/xwde/kit/inclusion"
documentation = "https://docs.rs/sitemapo"
categories = ["parser-implementations", "web-programming"]
keywords = ["sitemap", "crawler", "parser"]
description = """
The implementation of the Sitemap.xml (or URL inclusion) protocol with
the support of txt & xml formats, and video, image, news extensions.
"""

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
path = "./lib.rs"

[features]
default = ["extension"]
full = ["extension", "tokio"]

tokio = [
    "dep:tokio",
    "dep:async-trait",
    "quick-xml/async-tokio",
    "countio/tokio"
]

extension = ["dep:isolang"]

[dependencies]
url = { workspace = true }
thiserror = { workspace = true }
countio = { version = "0.2.15" }

quick-xml = { version = "0.31.0" }
bytes = { version = "1.5.0", features = [] }
time = { workspace = true, features = ["parsing", "formatting"] }

tokio = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
isolang = { version = "2.3.0", optional = true, features = [] }

[dev-dependencies]
time = { workspace = true, features = ["macros"] }
tokio = { workspace = true, features = ["rt", "macros"] }
